--- a/fortress/.classpath
+++ b/fortress/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="C:/Users/stone/eclipse/jee-latest-released/eclipse/lombok.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
