--- a/fortressServer/.classpath
+++ b/fortressServer/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/stone/eclipse/jee-latest-released/eclipse/lombok.jar"/>
+	<classpathentry kind="lib" path="lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
